(library
 (public_name quickjs.bindings)
 (name bindings)
 (modules constants bindings)
 (libraries ctypes ctypes.stubs ctypes.foreign)
 (preprocess
  (pps ppx_deriving.show bisect_ppx --conditional)))

(rule
 (targets constants.ml)
 (deps
  (source_tree ../vendor/quickjs))
 (action
  (run ../gen/constants.exe)))
