(library
 (public_name quickjs)
 (name quickjs)
 (modules quickjs)
 (libraries quickjs_raw))

(library
 (public_name quickjs.raw)
 (name quickjs_raw)
 (modules quickjs_raw stubs)
 (libraries bindings)
 (foreign_archives ../vendor/quickjs)
 (foreign_stubs
  (language c)
  (names stubs)
  (include_dirs ../vendor/quickjs)))

(rule
 (targets stubs.ml stubs.c)
 (action
  (run ../gen/stubs.exe)))
