(library
 (public_name quickjs)
 (name quickjs)
 (modules quickjs)
 (libraries quickjs_raw ctypes)
 (preprocess
  (pps bisect_ppx --conditional)))

(library
 (public_name quickjs.raw)
 (name quickjs_raw)
 (modules quickjs_raw stubs)
 (libraries bindings)
 (preprocess
  (pps bisect_ppx --conditional))
 (foreign_archives ../vendor/quickjs)
 (foreign_stubs
  (language c)
  (names stubs)
  (include_dirs ../vendor/quickjs)))

(rule
 (targets stubs.ml stubs.c)
 (action
  (run ../gen/stubs.exe)))
